Add 'New Grid' button to select up to 100 squares per side in the grid

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="top-container">
+        <button>New Grid</button>
+    </div>
 </body>
 </html>
